--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-phantomjs-shim": "^1.1.2",
     "karma-spec-reporter": "0.0.22",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
     "postcss-loader": "^0.6.0",
     "react-addons-test-utils": "0.14.x",
@@ -53,5 +54,6 @@
   },
   "peerDependencies": {
     "react": "^0.14.x"
-  }
+  },
+  "dependencies": {}
 }
