--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@descomplica/react-credit-card",
+  "name": "react-credit-card",
   "version": "1.0.4",
   "description": "A Simple React component Credit Card",
   "main": "./dist/react-credit-card.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/descomplica/react-credit-card"
+    "url": "https://github.com/DxTa/react-credit-card"
   },
   "keywords": [
     "react",
@@ -51,9 +51,6 @@
     "style-loader": "0.12.x",
     "webpack": "1.12.x",
     "webpack-dev-server": "1.12.x"
-  },
-  "peerDependencies": {
-    "react": "^0.14.x"
   },
   "dependencies": {}
 }
